chore: Address false positive code style issues