@@ -148,6 +148,7 @@ public class BukkitPlayer extends PlotPlayer<Player> {
         return true;
     }
 
+    @SuppressWarnings("CatchAndPrintStackTrace")
     private void callEvent(final @NonNull Event event) {
         final RegisteredListener[] listeners = event.getHandlers().getRegisteredListeners();
         for (final RegisteredListener listener : listeners) {
@@ -162,6 +163,7 @@ public class BukkitPlayer extends PlotPlayer<Player> {
         }
     }
 
+    @SuppressWarnings("StringSplitter")
     @Override
     @NonNegative
     public int hasPermissionRange(
@@ -319,7 +321,7 @@ public class BukkitPlayer extends PlotPlayer<Player> {
         if (id == ItemTypes.AIR) {
             // Let's just stop all the discs because why not?
             for (final Sound sound : Arrays.stream(Sound.values())
-                    .filter(sound -> sound.name().contains("DISC")).collect(Collectors.toList())) {
+                    .filter(sound -> sound.name().contains("DISC")).toList()) {
                 player.stopSound(sound);
             }
             // this.player.playEffect(BukkitUtil.getLocation(location), Effect.RECORD_PLAY, Material.AIR);
@@ -331,6 +333,7 @@ public class BukkitPlayer extends PlotPlayer<Player> {
         }
     }
 
+    @SuppressWarnings("deprecation") // Needed for Spigot compatibility
     @Override
     public void kick(final String message) {
         this.player.kickPlayer(message);
